--- a/.drone.yml
+++ b/.drone.yml
@@ -20,8 +20,8 @@ steps:
 - name: publish
   image: plugins/docker
   settings:
-    repo: jones2026/go-hello-world
-    cache_from: jones2026/go-hello-world:latest
+    repo: ${DRONE_REPO}
+    cache_from: ${DRONE_REPO}:latest
     tags: latest
     username:
       from_secret: docker_username
