--- a/.drone.yml
+++ b/.drone.yml
@@ -1,28 +1,27 @@
----
 kind: pipeline
 name: default
 trigger:
   branch:
     - master
-
 steps:
-- name: test
-  image: golang:1.11
-  commands:
-  - go test
-  - CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -ldflags '-extldflags "-static"' -o main .
-  
-- name: publish
-  image: plugins/docker
-  settings:
-    repo: ${DRONE_REPO}
-    cache_from: ${DRONE_REPO}:latest
-    tags: latest
-    username:
-      from_secret: docker_username
-    password:
-      from_secret: docker_password
-  when:
-    event:
-    - push
-    - tag
+  -
+    name: test
+    image: 'golang:1.11'
+    commands:
+      - 'go test'
+      - 'CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -ldflags ''-extldflags "-static"'' -o main .'
+  -
+    name: publish
+    image: plugins/docker
+    settings:
+      repo: '${DRONE_REPO}'
+      cache_from: '${DRONE_REPO}:latest'
+      tags: latest
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
+    when:
+      event:
+        - push
+        - tag
