--- a/.drone.yml
+++ b/.drone.yml
@@ -12,8 +12,8 @@ steps:
   - name: publish
     image: plugins/docker
     settings:
-      repo: '${DRONE_REPO}'
-      cache_from: '${DRONE_REPO}:latest'
+      repo: '${DRONE_REPO,,}'
+      cache_from: '${DRONE_REPO,,}:latest'
       tags: latest
       username:
         from_secret: docker_username
