--- a/.drone.yml
+++ b/.drone.yml
@@ -1,26 +1,37 @@
+---
 kind: pipeline
 name: default
+
+platform:
+  os: linux
+  arch: amd64
+
+steps:
+- name: test
+  image: golang:1.12.6
+  commands:
+  - go test
+  - "CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -ldflags '-extldflags \"-static\"' -o main ."
+
+- name: publish
+  image: plugins/docker
+  settings:
+    auto_tag: true
+    cache_from: "${DRONE_REPO,,}:latest"
+    password:
+      from_secret: docker_password
+    repo: "${DRONE_REPO,,}"
+    username:
+      from_secret: docker_username
+  when:
+    event:
+    - push
+    - tag
+
 trigger:
   branch:
-    - master
-steps:
-  - name: test
-    image: 'golang:1.12.6'
-    commands:
-      - 'go test'
-      - 'CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -ldflags ''-extldflags "-static"'' -o main .'
-      
-  - name: publish
-    image: plugins/docker
-    settings:
-      auto_tag: true
-      cache_from: '${DRONE_REPO,,}:latest'
-      repo: '${DRONE_REPO,,}'
-      username:
-        from_secret: docker_username
-      password:
-        from_secret: docker_password
-    when:
-      event:
-        - push
-        - tag
+  - master
+  event:
+  - tag
+
+...
