--- a/.drone.yml
+++ b/.drone.yml
@@ -10,7 +10,7 @@ steps:
 - name: test
   image: golang:1.12.6
   commands:
-  - go test
+  - go test -v
   - "CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -ldflags '-extldflags \"-static\"' -o main ."
 
 - name: publish
