chore: drone fmt

--- a/.drone.yml
+++ b/.drone.yml
@@ -15,16 +15,16 @@ steps:
 - name: build
   image: golang:1.13
   commands:
-  - "CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -ldflags '-extldflags \"-static\"' -o main ."
+  - CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -ldflags '-extldflags "-static"' -o main .
 
 - name: publish
   image: plugins/docker
   settings:
     auto_tag: true
-    cache_from: "${DRONE_REPO,,}:latest"
+    cache_from: ${DRONE_REPO,,}:latest
     password:
       from_secret: docker_password
-    repo: "${DRONE_REPO,,}"
+    repo: ${DRONE_REPO,,}
     username:
       from_secret: docker_username
   when:
