--- a/.drone.yml
+++ b/.drone.yml
@@ -11,7 +11,7 @@ steps:
 - name: test
   image: golang:1.15
   commands:
-  - go test -v -cover
+  - go test ./... -cover -v
 
 - name: lint
   image: golangci/golangci-lint:v1.33.0
